src/index.css
/* ... */
  /* ------------------------- */

.slideshow {
    width: 100%;
    height: 70vh;
    position: relative;
    overflow: hidden;
}

.slideshow-item {
    width: inherit;
    height: inherit;
    position: absolute;
    opacity: 0;
    animation: cycleImages 31s infinite;
    user-select: none;
}

.slideshow-item:nth-child(1), .slideshow-item:nth-child(1) img {
    animation-delay: 0s;
}  

.slideshow-item:nth-child(2), .slideshow-item:nth-child(2) img {
    animation-delay: 10s;
}  

.slideshow-item:nth-child(3), .slideshow-item:nth-child(3) img {
    animation-delay: 20s;
}



.slideshow-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    animation: zoom 31s infinite;
}

.slideshow-item-text {
    max-width: 40%;
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.53);
    color: #fff;
    margin: 0;
    padding: 0.9em;
    padding-left: 1.6em;
    border-radius: 0 0.3em 0.3em 0;
}

.slideshow-item-text h5 {
    font-size: 1.6em;
    text-transform: uppercase;
    letter-spacing: 0.2em;
    margin-bottom: 1em;
    color: #1ba0f2;
}

.slideshow-item-text p {
    font-size: 0.9em;
    letter-spacing: 0.1em;
    font-weight: 300;
    color: white;
}

@keyframes cycleImages {
    5% {
        opacity: 1;
    }

    50% {
      opacity: 1;
  }      

    70% {
        opacity: 0;
    }
}

@keyframes zoom {
    100% {
        transform: scale(1.3);
    }
}

@media screen and (max-width: 1000px) {
    .slideshow-item-text {
        max-width: 70%;
        padding: 0.9em;
    }

    .slideshow-item-text h5 {
        font-size: 1.6em;
    }
}

@media screen and (max-width: 767px) {
    .slideshow-item-text {
        max-width: 100%;
        top: initial;
        bottom: 0;
        transform: initial;
        padding: 0.9em;
        background-color: rgba(0, 0, 0, 0.445);
        text-align: center;
    }

    .slideshow-item-text h5 {
        font-size: 1.4em;
        padding: 0.6em;
        margin: 0;
    }      
    
    .slideshow-item-text p {
        font-size: 0.9em;
    }
}

.column {
  float: left;
  width: 33.3%;
  margin-bottom: 1em;
  padding: 0 0.5em;
}

@media screen and (max-width: 700px) {
  .row {   
    flex-direction: column;
  }

  .main {
    margin-top: 1.3em;
    padding: 0.2em;
    flex: 1;
    order: 1;
  }

  .side {
    flex: 1;
    order: 2;
    padding: 1.3em;
    position: relative; /* Explicitly set position for smaller screens */
  }
}  

@media screen and (max-width: 799px) {
  .column {
    width: 100%;
    display: block;
  }
  
  .main {
    flex: 55%;
  }

  .side {
    flex: 45%;
  }

}

.article {
  background-color: white;
  padding: 1.3em;
  margin-left: -1.3em;
  border-radius: 0.3em;
  cursor: default;
  box-shadow: var(--timelineCardBoxShadow, 0 0.1em 0.2em 0 rgba(0, 0, 0, .12), 0 0.1em 0.2em 0 rgba(0, 0, 0, .24));
}  

@media screen and (min-width: 800px) {
  .article:hover .div-readmore, .article-card:hover .div-readmore {
    transform: scale(1.05);
  }
}



.article-click {
  background-color: white;
  padding: 1.3em;
  margin-left: -1.3em;
  border-radius: 0.3em;
  cursor: pointer;
  box-shadow: var(--timelineCardBoxShadow, 0 0.1em 0.2em 0 rgba(0, 0, 0, .12), 0 0.1em 0.2em 0 rgba(0, 0, 0, .24));
}

.article-click a {
  line-height: 1.6em;
}  

.article-click.goToNews {
  text-align: center;
  transition: transform .2s;
  user-select: none;
}  

.article-click.goToNews:hover {
  transform: scale(1.015);
}

.flex-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}  

.card {
  box-shadow: 0 0.2em 0.25em 0 rgba(0, 0, 0, 0.2);
  cursor: pointer;
  border: 0.2em solid #1ba0f220;
  user-select: none;
}

/* Fake image, just for this example */
.fakeimg {
  background-color: #aaa;
  width: 100%;
  padding: 1.3em;
}


/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 700px) {
  .row {   
    flex-direction: column;
  }

  .main {
    margin-top: 1.3em;
    padding: 0.2em;
  }

  .article-click, .article {
    margin: 0.6em;
    margin-top: 0;
    padding: 0.9em;
  }

  .div-back {
    margin-left: 0.6em;
  }

}

.container {
  padding: 0 0.8em;
}

.container h2 {
  font-size: 1.3em;
}

textarea {
  background-color: white;
  border: 0;
}

textarea:focus{
  outline: none;
}

/* -------------- INPUT AND PLACEHOLDER DEFAULT ----------------- */

input, select {
  padding: 0.5em;
  padding-left: 0;
  border: 0.05em solid rgb(237, 237, 237);
  display: inline-block;
  border-radius: 0.15em;
}


input::placeholder, select::placeholder {
  color: #443c3e;
  font-size: 0.95em;
}

select:focus {
  outline: none;
}

input + input, input + select, select + input, select + select {
  border-left: none;
  margin-top: 0.5em;
}

input.amountNumber {
  width: 2em;
  text-align: center;
}


/* -------------- INPUT END ----------------- */

.h2 {
  font-size: 1.3em;
}

.h3 {
  font-size: 1em;
}

.container::after, .row2::after {
  content: "";
  clear: both;
  display: table;
}

a {
  text-decoration:none;
}

.fa-bars {
color: white;
}

.fa-remove {
color: white;
}

.fab:hover {
  cursor: pointer;
}

.flex-image-text {
display: flex;
align-items: center;
justify-content: flex-start; 
}

.flex-image-text > div > p {
  margin-top: 0;
  /* border: 1px solid blue; */
  padding: 0.8em 0em;
  margin-left: 0.05em;
}



@media screen and (min-width: 800px) {
  .flex-image-text div {
    padding-right: 0.9em;
  }
}


.flex-image-text h2 {
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  }

.flex-image-text h3 {
  margin-bottom: 0;
  margin-top: 0.2em;
}

.flex-image-text img {
max-width: 50%;
min-width: 50%;
height: auto; 
}

.flex-container-2.subheader h3 {
  margin-top: 0em;
}
/* ... */

